--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,44 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-image: url(/public/purplebackground.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  color: rgb(255, 255, 255);
 }
 
-.App-header {
-  background-color: #282c34;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-evenly;
-  color: white;
+main {
+  flex: 1;
   padding: 20px;
+  margin: 20px;
+  background-color: rgba(255, 255, 255, 0.2); /* Slightly lighten the main content for readability */
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-image: url(/public/purplebackground.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  color: rgb(255, 255, 255);
+}
+
+button {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #7d3b8a; /* Darker purple */
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 20px auto;
+  display: block;
+}
+
+button:hover {
+  background-color: #9c4bb5; /* Lighter purple */
 }
 
 @media (max-width: 600px) {
@@ -17,12 +46,4 @@
     width: 100%;
   }
 
-  .search-bar {
-    flex-direction: column;
-    gap: 10px;
-  }
-
-  .search-bar form {
-    flex-direction: column;
-  }
 }
