--- a/src/Searching.css
+++ b/src/Searching.css
@@ -1,31 +1,29 @@
+/* Searching.css */
+
 .search-container {
     display: flex;
-    align-items: center;
-    margin-right: 20px;
+    justify-content: center;
+    margin-top: 20px;
   }
 
   .search-input {
-    padding: 8px;
-    font-size: 16px;
-    border: none;
+    width: 50%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid #4b2e83;
     border-radius: 4px;
-    margin-right: 8px;
+    background-color: #f8f8f8;
+    font-size: 16px;
+    color: #4b2e83;
+  }
+
+  .search-input::placeholder {
+    color: #4b2e83;
+  }
+
+  .search-input:focus {
     outline: none;
-    background-color: #eee;
-    color: #333;
-  }
-
-  .search-button {
-    padding: 8px 16px;
-    font-size: 16px;
-    background-color: #7d3b8a; /* Darker purple */
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-right: 10px;
-    border-color: #9c4bb5;
-  }
-
-  .search-button:hover {
-    background-color: #9c4bb5; /* Lighter purple */
+    border-color: #6f42c1;
+    background-color: #fff;
   }
