--- a/src/Modal.css
+++ b/src/Modal.css
@@ -26,6 +26,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
   }
 
   .modal-close {
@@ -42,10 +43,11 @@
   .modal-header {
     display: flex;
     flex-direction: row;
+    align-items: center;
   }
 
   .modal-image {
-    width: 300px;
+    width: 200px;
     height: auto;
     border-radius: 8px;
     margin-right: 20px;
@@ -69,6 +71,7 @@
 
   .modal-overview {
     color: #f0f0f0;
+    margin-top: 10px;
   }
 
   .modal-content {
@@ -78,13 +81,21 @@
     border-radius: 8px;
     padding: 20px;
     overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   .movie-trailer {
+    width: 100%;
+    height: 315px;
     background-color: #333; /* Placeholder background color */
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
+    margin-top: 20px;
+    border-radius: 8px;
+    overflow: hidden;
   }
